gramatica.txt
### GRAMÁTICA BNF TRADUZIDA A PARTIR DA EBNF

<program>               :=  <statement_group> 
<block>                 :=  "{" <statement_group> "}"
<statement_group>       :=  <statement><statement_group> | e  ### passo intermediario para representar a repetição ou nulo
<statement>             :=  <variable-decl> ";" #first variavel-decl = vat
                        |   <assignment> ";" # first assignment = set
                        |   <print-statement> ";" # first print-statement = print
                        |   <if-statement> # first if-statement = if
                        |   <while-statement> # first while-statement = while
                        |   <return-statement> ";" # first return-statement = return
                        |   <function-decl>  # first function-decl = def
                        |   <block> # first block = {

<function-decl>         :=  "def" <identifier> "(" <formal_param_optional> ")" ":" <type> <block>

<formal_param_optional> :=  <formal-param> <formal_param_list> | e ### paaso intermediario para representar um parametro opcional 
<formal_param_list>     :=  "," <formal-param> <formal_param_list> | e  ### passo intermediario para representar a repetição ou nulo
<formal-param>          :=  <identifier> ":" <type>

<while-statement>       :=  "while" "(" <expression> ")" <block>
<if-statement>          :=  "if" "(" <expression> ")" <block> <else_block> 
<else_block>            :=  "else" <block> | e ### paaso intermediario para representar um parametro opcional 

<return-statement>      :=  "return" <expression>
<print-statement>       :=  "print" <expression>
<type>                  :=  "int" | "real" | "bool" | "void"

<variable-decl>         :=  "var" <identifier> ":" <type> "=" <expression>
<assignment>            :=  "set" <identifier> "=" <expression>

# <expression>            :=  <simple-expression> <relational-expression> 
<expression>            :=  <simple-expression> <relational-expression-list>
#<relational-expression> :=  <relational-op> <simple-expression> | e ### faltando a recursão ?
<relational_expression_list> :=  <relational-op> <simple-expression> <relational_expression_list> | e ### passo intermediario para representar a repetição ou nulo

<simple-expression>     :=  <term> <sum-simple-expression>
<sum-simple-expression> :=  <additive-op> <term> <sum-simple-expression> | e

<term>                  :=  <factor> <multiplicative-expr>
<multiplicative-expr>   :=  <multiplicative-op> <factor> <multiplicative-expr> | e


<factor>                :=  <literal>
                        |   <identifier> <factor_tail> 
                        |   <sub-expression>
                        |   <unary>

<factor_tail>           :=  "(" <actual-params> ")" | e

<unary>                 :=  <operation> <unary-expression>
<operation>             :=  "+" | "-" | "not"
<unary-expression>      :=  <expression> <unary-expression> | e
<sub-expression>        :=  "(" <expression> ")"

#<function-call>         :=  <identifier> "(" <actual-params> ")"

<actual-params>         :=  <expression> <maybe-expression> | e ### |e torna opcional para representar o [X] 
<maybe-expression>      :=  "," <expression> <maybe-expression> | e ### representa a repetição ou nulo para representar o {, X}

<relational-op>         :=  "<" | ">" | "==" | "!=" | "<=" | ">="
<additive-op>           :=  "+" | "-" | "or"
<multiplicative-op>     :=  "*" | "/" | "and"

<identifier>            :=  <valid_char> <maybe_valid_char>
<valid_char>            :=  "_" | <letter>
<maybe_valid_char>      :=  <valid_char> <maybe_valid_char> | <digit> <maybe_valid_char> | e
<digit>                 :=  0 | 1 | ... | 9
<letter>                :=  a | b | ... | z | A | ... | Z
<literal>               :=  <integer-literal> | "true" | "false"
<integer-literal>       :=  <digit> <integer-literal> | <digit>
